--- a/app/views/mess/dashboard.html.erb
+++ b/app/views/mess/dashboard.html.erb
@@ -244,7 +244,7 @@ display: none !important;
             
                             <ion-item>
                                 <ion-col>
-                                 Roll No
+                                 Student Roll No
                              </ion-col>
                              <ion-col>
                                <input type="text" id="guest[student_id]" class="guest-field">
@@ -253,7 +253,7 @@ display: none !important;
                             <br>
                             <ion-item>
                             <ion-col>
-                             Name
+                             Guest Name
                          </ion-col>
                          <ion-col>
                            <input type="text" name="item"  id="guest[name]" class="guest-field">
@@ -262,7 +262,7 @@ display: none !important;
                         <br>
                         <ion-item>
                         <ion-col>
-                         Roll No
+                         Guest Roll No
                      </ion-col>
                      <ion-col>
                        <input type="text" name="price" id="guest[rollno]"  class="guest-field">
@@ -291,7 +291,7 @@ display: none !important;
                                     <h3 style="text-align: center; padding-right:34px">Student List</h3><br>
                                     <div id="search_section">
                                     <ion-row><ion-col size=6>
-                                    <ion-searchbar placeholder="Type Name" id="nameSearchBar" onClear="alert(1)" onInput="filterStudentsByName()"></ion-searchbar></ion-col>
+                                    <ion-searchbar placeholder="Type Name" id="nameSearchBar"  onInput="filterStudentsByName()"></ion-searchbar></ion-col>
                                     <ion-col size=6>
                                     <ion-searchbar placeholder="Type Roll No" id="rollSearchBar" onInput="filterStudentsByRollNo()"></ion-searchbar></ion-col>
                                     </ion-row>
@@ -328,15 +328,6 @@ display: none !important;
                           <form id="myform">  
                             <ion-card-content>
                             <ion-list lines="none" class="line-input">
-                            <ion-item>
-                                <ion-col>
-                                 Date
-                             </ion-col>
-                             <ion-col>
-                               <input type="date" name="date" id="extra[date]" format="dd/mm/yyyy" class="extra-field"/>
-                             </ion-col>   
-                            </ion-item>
-                                <br>
             
                             <ion-item>
                                 <ion-col>
