--- a/app/views/mess/dashboard.html.erb
+++ b/app/views/mess/dashboard.html.erb
@@ -17,8 +17,14 @@
     window.modalController = modalController;
     import { alertController } from 'https://cdn.jsdelivr.net/npm/@ionic/core@next/dist/ionic/index.esm.js';
     window.alertController = alertController;
+    import { popoverController } from 'https://cdn.jsdelivr.net/npm/@ionic/core@next/dist/ionic/index.esm.js';
+    window.popoverController = popoverController;
   </script>
   <style>
+    .student_select .popover-content {
+  width: 500px;
+  max-height: 600px;
+}
     .extraToast
     {
         --background: green;
@@ -247,7 +253,7 @@ display: none !important;
                                  Student Roll No
                              </ion-col>
                              <ion-col>
-                               <input type="text" id="guest[student_id]" class="guest-field">
+                               <input type="text"  onfocus="selectRollGuest(event)" id="guest[student_id]" class="guest-field"/>
                              </ion-col>   
                             </ion-item>
                             <br>
@@ -289,13 +295,12 @@ display: none !important;
                             <ion-row>
                                 <ion-col size=5 offset=3>
                                     <h3 style="text-align: center; padding-right:34px">Student List</h3><br>
-                                    <div id="search_section">
                                     <ion-row><ion-col size=6>
-                                    <ion-searchbar placeholder="Type Name" id="nameSearchBar"  onInput="filterStudentsByName()"></ion-searchbar></ion-col>
+                                    <ion-searchbar placeholder="Type Name" id="nameSearchBar_list_student"  onInput="filterStudentsByName('list_student')"></ion-searchbar></ion-col>
                                     <ion-col size=6>
-                                    <ion-searchbar placeholder="Type Roll No" id="rollSearchBar" onInput="filterStudentsByRollNo()"></ion-searchbar></ion-col>
+                                    <ion-searchbar placeholder="Type Roll No" id="rollSearchBar_list_student" onInput="filterStudentsByRollNo('list_student')"></ion-searchbar></ion-col>
                                     </ion-row>
-                                    <div id="list"><ion-spinner></ion-spinner></div></div>
+                                    <div id="list_student"><ion-spinner></ion-spinner></div>
                                 </ion-col>
                             </ion-row>
                         </ion-grid>
@@ -334,7 +339,7 @@ display: none !important;
                                  Roll No
                              </ion-col>
                              <ion-col>
-                               <input type="text" name="student_id" id="extra[student_id]" class="extra-field"/>
+                               <input type="text" onfocus="selectRollExtra(event)" name="student_id" id="extra[student_id]" class="extra-field"/>
                              </ion-col>   
                             </ion-item>
                             <br>
@@ -374,7 +379,7 @@ display: none !important;
 
                     <div id="fee" class="tabcontent" style="display:none;">
                     <h3>Fee</h3>
-                    <p>Updates about mess fee happens here</p>
+                    
 
                     </div>
                     </ion-col>
@@ -387,33 +392,89 @@ display: none !important;
 </body>
 
 <script>
+let currentPopover = null;
+
+
+    async function selectRollGuest(ev) {
+      popover = await popoverController.create({
+        component: 'select-roll-guest',
+        event: ev,
+        translucent: true,
+        cssClass: 'student_select'
+      });
+      currentPopover = popover;
+      await popover.present();
+      getStudents("list_guest",'fillRollNoGuest');
+
+    }
+
+    async function selectRollExtra(ev) {
+      popover = await popoverController.create({
+        component: 'select-roll-extra',
+        event: ev,
+        translucent: true,
+        cssClass: 'student_select'
+      });
+      currentPopover = popover;
+      await popover.present();
+      getStudents("list_extra",'fillRollNoExtra');
+
+    }
+
+
+    function dismissPopover() {
+      if (currentPopover) {
+        currentPopover.dismiss().then(() => { currentPopover = null; });
+      }
+    }
+
+    customElements.define('select-roll-guest', class ModalContent extends HTMLElement {
+      connectedCallback() {
+        this.innerHTML = `
+      <ion-grid class="ion-no-padding">
+                            <ion-row>
+                                <ion-col class="ion-no-padding">
+                                    <ion-row><ion-col size=6>
+                                    <ion-searchbar placeholder="Type Name" id="nameSearchBar_list_guest"  onInput="filterStudentsByName('list_guest')"></ion-searchbar></ion-col>
+                                    <ion-col size=6>
+                                    <ion-searchbar placeholder="Type Roll No" id="rollSearchBar_list_guest" onInput="filterStudentsByRollNo('list_guest')"></ion-searchbar></ion-col>
+                                    </ion-row>
+                                    <div id="list_guest"><ion-spinner></ion-spinner></div>
+                                </ion-col>
+                            </ion-row>
+                        </ion-grid>
+        `;
+      }
+    });
+
+
+    customElements.define('select-roll-extra', class ModalContent extends HTMLElement {
+      connectedCallback() {
+        this.innerHTML = `
+      <ion-grid class="ion-no-padding">
+                            <ion-row>
+                                <ion-col class="ion-no-padding">
+                                    <ion-row><ion-col size=6>
+                                    <ion-searchbar placeholder="Type Name" id="nameSearchBar_list_extra"  onInput="filterStudentsByName('list_extra')"></ion-searchbar></ion-col>
+                                    <ion-col size=6>
+                                    <ion-searchbar placeholder="Type Roll No" id="rollSearchBar_list_extra" onInput="filterStudentsByRollNo('list_extra')"></ion-searchbar></ion-col>
+                                    </ion-row>
+                                    <div id="list_extra"><ion-spinner></ion-spinner></div>
+                                </ion-col>
+                            </ion-row>
+                        </ion-grid>
+        `;
+      }
+    });
+
+
+
+
 
 
 customElements.define('add-staff-form', class ModalContent extends HTMLElement {
       connectedCallback() {
-        this.innerHTML = `
-          <ion-header translucent>
-            <ion-toolbar>
-              <ion-title style="text-align: center; padding-left: 70px;">Add Staff</ion-title>
-              <ion-buttons slot="end">
-                <ion-button slot="icon-only" onclick="dismissModal()"><ion-icon name="close"></ion-icon></ion-button>
-              </ion-buttons>
-            </ion-toolbar>
-          </ion-header>
-          <ion-content fullscreen>
-          <ion-item style="--ion-color-primary:  #8f15f4">
-          <ion-label position="floating">Staff Name</ion-label>
-            <ion-input id='staff[name]' class="staff" required="true"></ion-input>
-            </ion-item>
-            <ion-item style="--ion-color-primary:  #8f15f4">
-            <ion-label position="floating">Mobile No</ion-label>
-            <ion-input type="number" id='staff[phoneno]' class="staff" required="true"></ion-input>
-            </ion-item><br>
-            <div style="text-align:center;">
-            <ion-button style="--ion-color-primary:  #8f15f4;self-align:center;" onClick="post('/createstaff',postData('staff'),onCreateStaff)">Add Staff</ion-button>
-            </div>
-          </ion-content>
-        `;
+        this.innerHTML = `<%= render partial: 'add_staff' %> `;
       }
     });
 
