--- a/app/views/student/dashboard.html.erb
+++ b/app/views/student/dashboard.html.erb
@@ -108,7 +108,7 @@
                 <ion-row>
                     <ion-col>
                         <ion-list class="side_list" class="ion-no-padding" style="margin-top: 20px; margin-left: 15px; margin-right: 15px">
-                            <ion-item lines='none' class="side_tabs" onClick="viewOption(event,'profile')" id="defaultOpen">
+                            <ion-item lines='none' class="side_tabs" onClick="viewOption(event,'profile'); post('/studentprofile','student_profile[student_id]=<%= @student.id %>',(data)=>{onGetProfile(data,'profile_content',false)})" id="defaultOpen">
                                 <div style="height: 57px;">
                                     <a>
                                         <ion-icon name="person-outline" class="side_icons"></ion-icon>
@@ -172,101 +172,17 @@
                     
                 
 
-                        <div id="profile" class="tabcontent" style="display:none;position: absolute;left: 100px">
-                        <h1 style="position: relative;left:50px">Personal Information</h1>
-                        <br>
+                        <div id="profile" class="tabcontent" style="display:none;">
+                            <ion-row style="height: 400px;">
+                                <ion-col offset=1 size=6>
+                                        <h1 style="text-align: center;">Personal Information</h1><br>
+                            <div id="profile_content">
+                                <ion-spinner></ion-spinner>
+                            </div>
+                                </ion-col>
+                            </ion-row>
+                            
                         
-                      
-                      <ion-card style = "width: 700px">
-
-                        <ion-card-container>
-                         <br>
-                        <ion-list lines="none">
-                            <ion-item>
-                                
-                                <ion-col>
-                                <ion-label>
-                                   &emsp;&emsp;&emsp; Name    
-                                </ion-label>
-                                </ion-col>
-                                <ion-col>
-                                    :
-                                </ion-col>
-                                <ion-col>
-                                <%= @student.name%>
-                                
-                                </ion-col>
-                            </ion-item>
-
-                            <ion-item>
-                                
-                                <ion-col>
-                                <ion-label>
-                                   &emsp;&emsp;&emsp;Roll No    
-                                </ion-label>
-                                </ion-col>
-                                <ion-col>
-                                    :
-                                </ion-col>
-                                <ion-col>
-                                <%= @student.rollno%>
-                                
-                                </ion-col>
-                            </ion-item>
-
-                            <ion-item>
-                                
-                                <ion-col>
-                                <ion-label>
-                                   &emsp;&emsp;&emsp;E-Mail   
-                                </ion-label>
-                                </ion-col>
-                                <ion-col>
-                                    :
-                                </ion-col>
-                                <ion-col>
-                                <%= @student.email%>
-                                
-                                </ion-col>
-                            </ion-item>
-
-                            <ion-item>
-                                
-                                <ion-col>
-                                
-                                   &emsp;&emsp;&emsp;Mess Code    
-                                
-                                </ion-col>
-                                <ion-col>
-                                    :
-                                </ion-col>
-                                <ion-col>
-                                <%= @student.mess_id%>
-                                
-                                </ion-col>
-                            </ion-item>
-
-                            <ion-item>
-                                
-                                <ion-col>
-                                
-                                   &emsp;&emsp;&emsp;Room No    
-                                
-                                </ion-col>
-                                <ion-col>
-                                    :
-                                </ion-col>
-                                <ion-col>
-                                <%= @student.roomno%>
-                                
-                                </ion-col>
-                            </ion-item>
-
-                        </ion-list>
-                        
-                        </ion-card-container>
-                        <br>
-                        </ion-card>
 
                     </div>
 
@@ -279,9 +195,9 @@
                     
                     <ion-col></ion-col><ion-col>
                     <div style="position:relative;left:110px;right:400px;">
-                    <ion-button id="getguest" onClick="getGuests()" style = "width:400px;height:40px;background-color: #8f15f4;color:white;" color="#8f15f4">GET GUEST LIST</ion-button>
+                    <ion-button id="getguest" onClick="post('/guestdata','guest_list[student_id]=<%= session[:id] %>',(data)=>{onGetGuestList(data,'guestss')})" style = "width:400px;height:40px;background-color: #8f15f4;color:white;" color="#8f15f4">GET GUEST LIST</ion-button>
                    </div></ion-col>
-                    <div id="guestz" style="position: relative;left:100px;"></div>
+                    <div id="guestss" style="position: relative;left:100px;"></div>
                     
                     </div>
                     
@@ -357,7 +273,7 @@
                         
                         <ion-col></ion-col><ion-col>
                         <div style="position:relative;left:110px;right:400px;">
-                        <ion-button id="getextra" onClick="getExtra()" style = "width:400px;height:40px;background-color: #8f15f4;color:white;" color="#8f15f4">GET MY EXTRAS</ion-button>
+                        <ion-button id="getextra" onClick="post('/extradata','extra_list[student_id]=<%= session[:id] %>',(data)=>{onGetExtraList(data,'extras')})" style = "width:400px;height:40px;background-color: #8f15f4;color:white;" color="#8f15f4">GET MY EXTRAS</ion-button>
                        </div></ion-col>
                         <div id="extras" style="position: relative;left:100px;"></div>
                         
@@ -382,101 +298,8 @@
 </body>
 <script>
 
-function getExtra(){
-    var txt="",i,sum=0;
-    var xmlhttp = new XMLHttpRequest();
+    document.getElementById("defaultOpen").click();
 
-    xmlhttp.onreadystatechange = function() {
-        if (this.readyState == 4 && this.status == 200) {
-            var myObj = JSON.parse(this.responseText);
-            if(myObj.data.length==0)
-            {
-                txt += "<p id='noMatch' style='text-align:center;display:none;'>No matching students</p>"
-            }
-            else
-            {
-                txt+="<br><ion-card style='width:700px'><ion-card-container><ion-list><ion-card-header><ion-item><ion-col>S.No</ion-col><ion-col>Item</ion-col><ion-col>Price</ion-col></ion-item></ion-card-header>"
-                for(i=0;i<myObj.data.length-1;i++)
-                {
-                    sum+=myObj.data[i].price;
-                    txt+="<ion-item lines='none' ><ion-col>"+(i+1)+"."+"</ion-col><ion-col>"+myObj.data[i].item+"</ion-col><ion-col>"+myObj.data[i].price+".00"+"</ion-col></ion-item>"
-                }
-                sum+=myObj.data[i].price;
-                txt+="<ion-item><ion-col>"+(i+1)+"."+"</ion-col><ion-col>"+myObj.data[i].item+"</ion-col><ion-col>"+myObj.data[i].price+".00"+"</ion-col></ion-item></ion-list><ion-list><ion-card-footer><ion-item><ion-col></ion-col><ion-col>Total Amount</ion-col><ion-col>"+sum+".00"+"</ion-col></ion-item></ion-card-footer></ion-list></ion-card-container></ion-card>"
-                document.getElementById("extras").innerHTML = txt;
-                console.log(sum);
-
-            }
-        }
-    };
-    xmlhttp.open("GET",'/extradata', true);
-    xmlhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-    xmlhttp.send();
-
-}
-
-function getGuests(){
-    var txt="",i;
-    var xmlhttp = new XMLHttpRequest();
-
-    xmlhttp.onreadystatechange = function() {
-        if (this.readyState == 4 && this.status == 200) {
-            var myObj = JSON.parse(this.responseText);
-            if(myObj.data.length==0)
-            {
-                txt += "<p id='noMatch' style='text-align:center;display:none;'>No matching students</p>"
-            }
-            else
-            {
-                txt+="<br><ion-card style='width:700px'><ion-card-container><ion-list><ion-card-header><ion-item><ion-col>S.No</ion-col><ion-col>Guest Name</ion-col><ion-col>Guest Roll No</ion-col></ion-item></ion-card-header>"
-                for(i=0;i<myObj.data.length-1;i++)
-                {
-                  
-                    txt+="<ion-item lines='none' ><ion-col>"+(i+1)+"."+"</ion-col><ion-col>"+myObj.data[i].name+"</ion-col><ion-col>"+myObj.data[i].rollno+"</ion-col></ion-item>"
-                }
-                console.log(txt);
-                txt+="<ion-item lines='none'><ion-col>"+(i+1)+"."+"</ion-col><ion-col>"+myObj.data[i].name+"</ion-col><ion-col>"+myObj.data[i].rollno+"</ion-col></ion-item></ion-list></ion-card-container></ion-card>"
-                document.getElementById("guestz").innerHTML = txt;
-              
-
-            }
-        }
-    };
-    xmlhttp.open("GET",'/guestlist', true);
-    xmlhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-    xmlhttp.send();
-
-}
-
-function GetDays(){
-    var dropdt = new Date(document.getElementById("messcut[to_date]").value);
-    var pickdt = new Date(document.getElementById("messcut[from_date]").value);
-    return parseInt((dropdt - pickdt) / (24 * 3600 * 1000));
-}
-
-function cal(){
-if(document.getElementById("messcut[to_date]")){
-document.getElementById("messcut[no_of_days]").value=GetDays();
-}  
-}
-
-
-function viewOption(evt, option) {
-  var i, tabcontent, tablinks;
-  tabcontent = document.getElementsByClassName("tabcontent");
-  for (i = 0; i < tabcontent.length; i++) {
-    tabcontent[i].style.display = "none";
-  }
-  tablinks = document.getElementsByClassName("side_tabs");
-  for (i = 0; i < tablinks.length; i++) {
-    tablinks[i].className = tablinks[i].className.replace("active", "");
-  }
-  evt.currentTarget.className += " active";
-  document.getElementById(option).style.display = "block";  
-}
-
-// Get the element with id="defaultOpen" and click on it
-document.getElementById("defaultOpen").click();
 
 </script>
 </html>
