--- a/app/views/student/dashboard.html.erb
+++ b/app/views/student/dashboard.html.erb
@@ -116,7 +116,7 @@
                                     </a>
                                 </div>
                             </ion-item>
-                            <ion-item lines='none' class="side_tabs" onClick="viewOption(event,'extra')">
+                            <ion-item lines='none' class="side_tabs" onClick="post('/extradata','extra_list[student_id]=<%= session[:id] %>',(data)=>{onGetExtraList(data,'extras')}); viewOption(event,'extra')">
                                 <div style="height: 57px;">
                                     <a>
                                         <ion-icon name="beer-outline" class="side_icons"></ion-icon>
@@ -124,7 +124,7 @@
                                     </a>
                                 </div>
                             </ion-item>
-                            <ion-item lines='none' class="side_tabs" onClick="viewOption(event,'guests')">
+                            <ion-item lines='none' class="side_tabs" onClick="post('/guestdata','guest_list[student_id]=<%= session[:id] %>',(data)=>{onGetGuestList(data,'guestss')}); viewOption(event,'guests')">
                                 <div style="height: 57px;">
                                     <a>
                                         <ion-icon name="people-outline" class="side_icons"></ion-icon>
@@ -187,16 +187,13 @@
                     </div>
 
                     <div id="guests" class="tabcontent" style="display:none;position: absolute;left: 60px">
-                    <h1 style="position: relative;left:50px">MY GUEST LIST</h1>
+                    <h1 style="position: relative;left:50px">MY GUESTS</h1>
                     <br>
                         
                         
                     <div id="s2">
                     
-                    <ion-col></ion-col><ion-col>
-                    <div style="position:relative;left:110px;right:400px;">
-                    <ion-button id="getguest" onClick="post('/guestdata','guest_list[student_id]=<%= session[:id] %>',(data)=>{onGetGuestList(data,'guestss')})" style = "width:400px;height:40px;background-color: #8f15f4;color:white;" color="#8f15f4">GET GUEST LIST</ion-button>
-                   </div></ion-col>
+                    
                     <div id="guestss" style="position: relative;left:100px;"></div>
                     
                     </div>
@@ -271,10 +268,7 @@
                         
                         <div id="s1">
                         
-                        <ion-col></ion-col><ion-col>
-                        <div style="position:relative;left:110px;right:400px;">
-                        <ion-button id="getextra" onClick="post('/extradata','extra_list[student_id]=<%= session[:id] %>',(data)=>{onGetExtraList(data,'extras')})" style = "width:400px;height:40px;background-color: #8f15f4;color:white;" color="#8f15f4">GET MY EXTRAS</ion-button>
-                       </div></ion-col>
+                       
                         <div id="extras" style="position: relative;left:100px;"></div>
                         
                         </div>
@@ -283,15 +277,15 @@
                     </div>
 
                     
-                    <div id="fee" class="tabcontent" style="display:none;position: absolute;left: 60px">
-                    <h1 style="position: relative;left:50px">MY MESS FEE</h1>
-                    <br>
-                        <br>
-                        <ion-button onClick="check();" style = "position:relative;left:100px;width:350px;height:40px;background-color: #8f15f4;color:white;" color="#8f15f4">GET DETAILED FEE</ion-button>
-                        <br>
-                        <div id="fees" style="position: relative;left:100px;"></div>
-                      
-                    <br>
+                    <div id="fee" class="tabcontent">
+                        <ion-row>
+                            <ion-col size=4 offset=3>
+                                <ion-row><ion-col offset=1><h1>My Mess Fee</h1><br><br></ion-col></ion-row>
+                                <input type=hidden value='1'/><ion-button expand="block" value=0 onClick="check(<%= session[:id] %>,'fees',this);" style = "height:40px;background-color: #8f15f4;color:white;" color="#8f15f4">GET DETAILED FEE<ion-icon slot="end" name='chevron-down'></ion-icon></ion-button>
+                                <br>
+                                <div id="fees"></div>
+                            </ion-col>
+                        </ion-row>
                     </div>
 
                 </div>
@@ -307,50 +301,7 @@
 
 
 
-function check(){
-  
-    var today = new Date().getDay();
-    var txt="";
-    if(today>=1){
-        getFeeList();
-    }
-    else
-    {
-       txt+="&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<ion-label color='red'><small><b>This button is disabled</b></small></ion-label>"
-       document.getElementById("fees").innerHTML = txt;
-    }
-    
-}
-function getFeeList()
-{
-   
-    var txt="",TotalAmt=0,TotalNoOfMessCuts=0,NoOfGuests=0,i,TotalMonthFee=0,MonthBill=0,GuestFee=0,ExtraFee=0;
-    var xmlhttp = new XMLHttpRequest();
 
-    xmlhttp.onreadystatechange = function() {
-        
-        if(this.readyState == 4 && this.status == 200){
-            var myObj =JSON.parse(this.responseText);
-           
-            NoOfGuests=myObj.guest.length;
-            for(i=0;i<myObj.extra.length;i++){
-                TotalAmt+=myObj.extra[i].price;
-            }
-            for(i=0;i<myObj.messcut.length;i++){
-                TotalNoOfMessCuts+=myObj.messcut[i].no_of_days;
-            }
-            MonthBill = (80*30)-(80*TotalNoOfMessCuts);
-            GuestFee = (80*NoOfGuests);
-            ExtraFee = TotalAmt;
-            TotalMonthFee=(TotalAmt+(80*30)+(NoOfGuests*80))-(80*TotalNoOfMessCuts);
-            txt+="<ion-card style='width:700px;'><ion-card-container><ion-list><ion-item><ion-col>Month Fee</ion-col><ion-col>"+MonthBill+"</ion-col></ion-item><ion-item><ion-col>Guest Fee</ion-col><ion-col>"+GuestFee+"</ion-col></ion-item><ion-item><ion-col>Extra Fee</ion-col><ion-col>"+ExtraFee+"</ion-col></ion-item><ion-item><ion-col>Total Month Bill</ion-col><ion-col>"+TotalMonthFee+"</ion-col></ion-item></ion-list></ion-card-container></ion-card>"
-            document.getElementById("fees").innerHTML = txt;
-        }
-    };
-    xmlhttp.open("GET",'/feestructure',true);
-    xmlhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-    xmlhttp.send();
-}
 
 
     document.getElementById("defaultOpen").click();
