login segment implementation

--- a/app/views/accounts/login.html.erb
+++ b/app/views/accounts/login.html.erb
@@ -1,43 +1,193 @@
+<html>
+<head>
+<%= javascript_include_tag 'application' %>
 <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core@next/dist/ionic/ionic.esm.js"></script>
-  <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core@next/dist/ionic/ionic.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core@next/css/ionic.bundle.css"/>
-<fieldset>
+<script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core@next/dist/ionic/ionic.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core@next/css/ionic.bundle.css"/>
+<style>
+:root {
 
-<h1>Login</h1>
+    --input-color: #99A3BA;
+    --input-border: #CDD9ED;
+    --input-background: #fff;
+    --input-placeholder: #CBD1DC;
+
+    --input-border-focus: #275EFE;
+
+}
+
+.form-field {
+    display: block;
+    width: 70%;
+    padding: 8px 16px;
+    line-height: 25px;
+    font-size: 14px;
+    font-weight: 500;
+    font-family: inherit;
+    border-radius: 6px;
+    -webkit-appearance: none;
+    color: var(--input-color);
+    border: 1px solid var(--input-border);
+    background: var(--input-background);
+    transition: border .3s ease;
+    &::placeholder {
+        color: var(--input-placeholder);
+    }
+    &:focus {
+        outline: none;
+        border-color: var(--input-border-focus);
+    }
+}
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.buttons {
+    margin: 10%;
+    text-align: center;
+}
+
+.btn-hover {
+    width: 200px;
+    font-size: 16px;
+    font-weight: 600;
+    color: #fff;
+    cursor: pointer;
+    margin: 20px;
+    height: 55px;
+    text-align:center;
+    border: none;
+    background-size: 300% 100%;
+
+    border-radius: 50px;
+    moz-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+}
+
+.btn-hover:hover {
+    background-position: 100% 0;
+    moz-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+}
+
+.btn-hover:focus {
+    outline: none;
+}
+
+.btn-grad {background-image: linear-gradient(to right, #fc00ff 0%, #00dbde 51%, #fc00ff 100%)}
+.btn-grad:hover { background-position: right center; }
+
+.btn-hover.color-1 {
+    background-image: linear-gradient(to right, #fc00ff 0%, #00dbde 51%, #fc00ff 100%);
+    box-shadow: 0 4px 15px 0 rgba(49, 196, 190, 0.75);
+}
+html{
+    background-image: black;
+}
+ion-content {
+    --background: #ccc url("../../assets/bg-01.jpg") no-repeat center center / cover;
+}
+</style>
+</head>
+<body>
+    <ion-content style="background-image: url('../assets/images/bg-01.jpg');">
+    <ion-grid>
+    <ion-row>
+    <ion-col></ion-col><ion-col>
+    <ion-card style="width:500px;top:100px;">
+        <br>
+        
+            <ion-card-content>
+                
+                <ion-card-title style="position:relative;left:200px;font-size:25px"> LOGIN </ion-card-title ><br>
+                <ion-row>
+                    <ion-col>
 
 
 
-<div style="width:400px;">
-    <div style="float: left; width: 60px"> 
-      <%= button_to "Student", login_path, :method => "get" %>
-    </div>
-    <div style="float: left; width: 100px"> 
-        <%= button_to "Mess", loginMess_path, :method => "get" %>
-    </div>
-</div>
-
-<br>
-<%= form_with scope: :student, url: login_path, local: true do |form| %>
-<p id=”alert”><%= flash.alert %></p>
-
-  <div>
-    <%= form.label "Roll No" %><br>
-    <%= form.text_field :rollno %><br>
-  </div>
+                        <ion-segment style="--ion-color-primary: #8f15f4" scrollable value="student">
+        <ion-segment-button id="loginToggleInitial" onClick="loginToggle(event)" value="student" layout="icon-start">
+          <ion-label>Student</ion-label>
+        </ion-segment-button>
+        <ion-segment-button onClick="loginToggle(event)" value="mess" layout="icon-start">
+          <ion-label>Mess</ion-label>
+        </ion-segment-button>
+    </ion-segment>
 
 
 
-  <div>
-    <%= form.label :password %><br>
-    <%= form.password_field :password %><br>
-  </div>
+                    </ion-col>
+                </ion-row>
+                <div style="text-align: center;"><p id=”alert”><%= flash.alert %></p></div>
 
-  <br>
+                <div id="studentLogin">
+                <%= form_with scope: :student, url: authenticate_path, local: true do |form| %>
+                <ion-row><ion-col size=12 offset=1.7><ion-list lines="none">
 
-  <div>
-    <%= form.submit "Log in" %>
-    <%= link_to 'New Here?Register', signup_student_path %>
-  </div>
-<% end %>
-</fieldset>
+               
+              
+                    <ion-label>&emsp;&nbsp;<%= form.label "Roll No" %></ion-label>
+                    <ion-item>
+                        <%= form.text_field :rollno , class: 'form-field'%>
+                    </ion-item><br>
+                    <ion-label>&emsp;&nbsp;<%= form.label "Password" %></ion-label>
+                    <ion-item>
+                         <%= form.password_field :password, class:'form-field' %>
+                    </ion-item>
+                   
+                </ion-list></ion-col></ion-row>
+                
+                <ion-row><ion-col offset=1.6><div>
+                    <%= form.submit "Log in",style: "width:300px;", class: "btn-hover color-1" %>
+                </div></ion-col></ion-row>
+                <% end %>
+                </div>
 
+                <div id="messLogin" style="display: none;">
+                <%= form_with scope: :mess, url: authenticateMess_path, local: true do |form| %>
+                <ion-row><ion-col size=12 offset=1.7><ion-list lines="none">
+
+
+               
+              
+                    <ion-label>&emsp;&nbsp;<%= form.label "Mess Name" %></ion-label>
+                    <ion-item>
+                        <%= form.text_field :mess_name , class: 'form-field'%>
+                    </ion-item><br>
+                    <ion-label>&emsp;&nbsp;<%= form.label "Password" %></ion-label>
+                    <ion-item>
+                         <%= form.password_field :password, class:'form-field' %>
+                    </ion-item>
+                   
+                </ion-list></ion-col></ion-row>
+                
+                <ion-row><ion-col offset=1.6><div>
+                    <%= form.submit "Log in",style: "width:300px;", class: "btn-hover color-1" %>
+                </div></ion-col></ion-row>
+                <% end %>
+                </div>
+                <div style="text-align: center;"><p>Or sign up as</p></div>
+                <ion-row>
+                    <ion-col size=2 offset=4.3><a style="text-decoration: none; font-size: 17px; color: rgba(0, 0, 0, 0.6);" onMouseOver="this.style.color='purple'" onMouseOut="this.style.color='rgba(0, 0, 0, 0.6)'" href="/accounts/signup/mess">Mess</a></ion-col>
+                    <ion-col size=2 ><a onMouseOver="this.style.color='purple'" onMouseOut="this.style.color='rgba(0, 0, 0, 0.6)'" style="text-decoration: none; font-size: 17px; color: rgba(0, 0, 0, 0.6);" href="/accounts/signup/student">Student</a></ion-col>
+                </ion-row>
+            </ion-card-content>
+                    
+        <br>
+    </ion-card>
+    </ion-col><ion-col></ion-col>
+    </ion-row>
+    </ion-grid>
+
+    </ion-content>
+</body>
+<script>
+ 
+</script>
+</html>
